--- a/src/ui/OldAgeOrganizationAdminRole/OldAgeAdminWorkAreaJPanel.form
+++ b/src/ui/OldAgeOrganizationAdminRole/OldAgeAdminWorkAreaJPanel.form
@@ -216,5 +216,18 @@
         </Constraint>
       </Constraints>
     </Component>
+    <Component class="javax.swing.JLabel" name="imageLabel">
+      <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/icon/OldAGeFoodDonation.jpeg"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="jLabel1"/>
+      </Properties>
+      <Constraints>
+        <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
+          <AbsoluteConstraints x="660" y="280" width="390" height="290"/>
+        </Constraint>
+      </Constraints>
+    </Component>
   </SubComponents>
 </Form>
