--- a/src/ui/RestaurantAdminRole/RestaurantAdminWorkAreaJPanel.form
+++ b/src/ui/RestaurantAdminRole/RestaurantAdminWorkAreaJPanel.form
@@ -116,12 +116,12 @@
     <Component class="javax.swing.JLabel" name="jLabel5">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/icon/emergency512icon.png"/>
+          <Image iconType="3" name="/icon/manager128x.png"/>
         </Property>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="17" y="22" width="-1" height="-1"/>
+          <AbsoluteConstraints x="17" y="22" width="150" height="200"/>
         </Constraint>
       </Constraints>
     </Component>
